--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.12.4",
+    "formsnap": "^2.0.1",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
@@ -55,6 +56,9 @@
   "dependencies": {
     "@node-rs/argon2": "^2.0.2",
     "better-sqlite3": "^12.4.1",
-    "bullmq": "^5.61.0"
+    "bullmq": "^5.61.0",
+    "svelte-sonner": "^1.0.5",
+    "sveltekit-superforms": "^2.27.4",
+    "zod": "^4.1.12"
   }
 }
