--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.18",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22",
+    "@types/pg": "^8.15.5",
     "bits-ui": "^2.11.6",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
@@ -45,6 +45,8 @@
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.39.5",
     "svelte-check": "^4.3.2",
+    "svelte-fullcalendar": "^3.0.0",
+    "svelte-preprocess": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.1.13",
@@ -54,9 +56,13 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@node-rs/argon2": "^2.0.2",
-    "better-sqlite3": "^12.4.1",
     "bullmq": "^5.61.0",
+    "pg": "^8.16.3",
     "square": "^43.1.1",
     "svelte-sonner": "^1.0.5",
     "sveltekit-superforms": "^2.27.4",
