--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.39.5",
     "svelte-check": "^4.3.2",
-    "svelte-fullcalendar": "^3.0.0",
     "svelte-preprocess": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
@@ -58,9 +57,11 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/list": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@node-rs/argon2": "^2.0.2",
+    "@strapi/client": "^1.5.0",
     "bullmq": "^5.61.0",
     "pg": "^8.16.3",
     "square": "^43.1.1",
