--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
+    "embla-carousel-svelte": "^8.6.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.12.4",
@@ -65,6 +66,7 @@
     "bullmq": "^5.61.0",
     "pg": "^8.16.3",
     "square": "^43.1.1",
+    "svelte-exmarkdown": "^5.0.2",
     "svelte-sonner": "^1.0.5",
     "sveltekit-superforms": "^2.27.4",
     "zod": "^4.1.12"
