--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
+    "@iconify-json/material-symbols": "^1.2.48",
+    "@iconify/tailwind4": "^1.1.1",
     "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.544.0",
     "@oslojs/crypto": "^1.0.1",
